improving cran checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(irlba,irlba)
 importFrom(lfa,af)
 importFrom(lfa,af_snp)
 importFrom(lfa,lfa)
+importFrom(methods,is)
 importFrom(parallel,mclapply)
 importFrom(qvalue,empPvals)
 importFrom(qvalue,lfdr)
