--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: jackstraw
 Type: Package
 Title: Statistical Inference for Unsupervised Learning
 Version: 1.3
-Date: 2018-08-08
+Date: 2018-12-03
 Author: Neo Christopher Chung <nchchung@gmail.com>, John D. Storey
     <jstorey@princeton.edu>, Wei Hao <whao@princeton.edu>
 Maintainer: Neo Christopher Chung <nchchung@gmail.com>
 Description: Test for association between the observed data
-	and their systematic patterns of variations, that are often extracted by unsupervised learning.
-	Systematic patterns may be captured by latent variables using principal component analysis (PCA), factor analysis (FA), and related methods. This allows one to, for example, obtain principal components (PCs) and conduct rigorous statistical testing for association between observed variables and PCs. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and other algorithms, finds subpopulations among the observed variables. The jackstraw test can estimate statistical significance of cluster membership, so that one can evaluate the strength of membership assignments. This package also includes several related methods to support statistical inference and probabilistic feature selection for unsupervised learning.
+	and their systematic patterns of variations.
+	Systematic patterns may be captured by latent variables using principal component analysis (PCA), factor analysis (FA), and related methods. The jackstraw enables statistical testing for association between observed variables and latent variables, as captured by PCs or other estimates. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and others, finds subpopulations among the observed variables. The jackstraw estimates statistical significance of cluster membership, including unsupervised evaluation of cell identities in single cell RNA-seq. P-values and posterior probabilities allows one to rigorously evaluate the strength of cluster membership assignments.
 LazyData: true
 Depends: R (>= 3.0.0)
 biocViews: 
@@ -27,5 +27,6 @@ Suggests:
 	knitr,
 	rmarkdown
 License: GPL-2
-RoxygenNote: 6.0.1
+Encoding: UTF-8
+RoxygenNote: 6.1.0
 VignetteBuilder: knitr
