--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,32 +1,32 @@
 Package: jackstraw
 Type: Package
 Title: Statistical Inference for Unsupervised Learning
-Version: 1.3
-Date: 2018-12-03
+Version: 1.3.1
+Date: 2019-8-13
 Author: Neo Christopher Chung <nchchung@gmail.com>, John D. Storey
     <jstorey@princeton.edu>, Wei Hao <whao@princeton.edu>
 Maintainer: Neo Christopher Chung <nchchung@gmail.com>
 Description: Test for association between the observed data
 	and their systematic patterns of variations.
-	Systematic patterns may be captured by latent variables using principal component analysis (PCA), factor analysis (FA), and related methods. The jackstraw enables statistical testing for association between observed variables and latent variables, as captured by PCs or other estimates. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and others, finds subpopulations among the observed variables. The jackstraw estimates statistical significance of cluster membership, including unsupervised evaluation of cell identities in single cell RNA-seq. P-values and posterior probabilities allows one to rigorously evaluate the strength of cluster membership assignments.
+	Systematic patterns may be captured with latent variable modelings using principal component analysis (PCA), factor analysis (FA), and related methods. The jackstraw enables statistical testing for association between observed variables and latent variables, as captured by PCs or other estimates. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and others, finds subpopulations among the observed variables. The jackstraw estimates statistical significance of cluster membership, with an application to unsupervised evaluation of cell identities in single cell RNA-seq. This package also implements posterior inclusion probabilities (PIPs) that can be used for feature selection of genes, cells, and others.
 LazyData: true
 Depends: R (>= 3.0.0)
 biocViews: 
 Imports:
+	methods,
+	stats
+Suggests:
 	corpcor,
 	cluster,
-	methods,
 	ClusterR,
-	qvalue,
-	lfa,
-	stats,
-	irlba,
-	rsvd
-Suggests:
 	parallel,
 	knitr,
-	rmarkdown
+	rmarkdown,
+	irlba,
+	qvalue,
+	lfa,
+	rsvd
 License: GPL-2
 Encoding: UTF-8
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 VignetteBuilder: knitr
