a vignette to apply the jackstraw test for cluster membership

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(find_k)
 export(jackstraw_MiniBatchKmeans)
+export(jackstraw_alstructure)
 export(jackstraw_cluster)
 export(jackstraw_irlba)
 export(jackstraw_kmeans)
@@ -13,12 +14,14 @@ export(jackstraw_rpca)
 export(jackstraw_subspace)
 export(lfa.corpcor)
 export(permutationPA)
+export(pi0est_bootstrap)
 export(pip)
 import(stats)
 importFrom(ClusterR,KMeans_rcpp)
 importFrom(ClusterR,MiniBatchKmeans)
 importFrom(ClusterR,predict_KMeans)
 importFrom(ClusterR,predict_MBatchKMeans)
+importFrom(alstructure,alstructure)
 importFrom(cluster,pam)
 importFrom(corpcor,fast.svd)
 importFrom(irlba,irlba)
