--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: jackstraw
 Type: Package
 Title: Statistical Inference for Unsupervised Learning
-Version: 1.3.4.9000
+Version: 1.3.5.9000
 Author: Neo Christopher Chung <nchchung@gmail.com>, John D. Storey
     <jstorey@princeton.edu>, Wei Hao <whao@princeton.edu>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
 Maintainer: Neo Christopher Chung <nchchung@gmail.com>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
@@ -23,7 +23,9 @@ Imports:
 	lfa,
 	gcatest,
 	parallel,
-	alstructure
+	alstructure,
+	BEDMatrix,
+	genio
 Suggests:
     knitr,
     rmarkdown,
