--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,7 @@ Version: 1.3.5.9000
 Author: Neo Christopher Chung <nchchung@gmail.com>, John D. Storey
     <jstorey@princeton.edu>, Wei Hao <whao@princeton.edu>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
 Maintainer: Neo Christopher Chung <nchchung@gmail.com>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
-Description: Test for association between the observed data
-	and their systematic patterns of variations.
-	Systematic patterns may be captured with latent variable modelings using principal component analysis (PCA), factor analysis (FA), and related methods. The jackstraw enables statistical testing for association between observed variables and latent variables, as captured by PCs or other estimates. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and others, finds subpopulations among the observed variables. The jackstraw estimates statistical significance of cluster membership, with an application to unsupervised evaluation of cell identities in single cell RNA-seq. This package also implements posterior inclusion probabilities (PIPs) that can be used for feature selection of genes, cells, and others.
+Description: Test for association between the observed data and their systematic patterns of variations. Systematic patterns may be captured with latent variable modelings using principal component analysis (PCA), factor analysis (FA), and related methods. The jackstraw enables statistical testing for association between observed variables and latent variables, as captured by PCs or other estimates. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and others, finds subpopulations among the observed variables. The jackstraw estimates statistical significance of cluster membership, with an application to unsupervised evaluation of cell identities in single cell RNA-seq. This package also implements posterior inclusion probabilities (PIPs) that can be used for feature selection of genes, cells, and others.
 LazyData: true
 Depends: R (>= 3.0.0)
 biocViews: 
@@ -20,12 +18,12 @@ Imports:
 	rsvd,
 	ClusterR,
 	cluster,
-	lfa,
-	gcatest,
+	lfa (>= 2.0.6.9000),
+	gcatest (>= 2.0.4.9000),
 	parallel,
 	alstructure,
 	BEDMatrix,
-	genio
+	genio (>= 1.0.15.9000)
 Suggests:
     knitr,
     rmarkdown,
