--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: jackstraw
 Type: Package
 Title: Statistical Inference for Unsupervised Learning
-Version: 1.3.6.9000
+Version: 1.3.7
 Author: Neo Christopher Chung <nchchung@gmail.com>, John D. Storey
     <jstorey@princeton.edu>, Wei Hao <whao@princeton.edu>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
 Maintainer: Neo Christopher Chung <nchchung@gmail.com>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
@@ -18,11 +18,10 @@ Imports:
 	rsvd,
 	ClusterR,
 	cluster,
-	lfa (>= 2.0.6.9000),
-	gcatest (>= 2.0.4.9000),
+	lfa,
+	gcatest,
 	parallel,
 	alstructure,
-	BEDMatrix,
 	genio (>= 1.0.15.9000)
 Suggests:
     knitr,
@@ -37,6 +36,6 @@ Suggests:
     testthat (>= 3.0.0)
 License: GPL-2
 Encoding: UTF-8
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 VignetteBuilder: knitr
 Config/testthat/edition: 3
