removed package dependencies `parallel` and `genio` which are temporarily not being used; reduced `jackstraw_rpca` example runtime too

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,7 @@ Imports:
 	irlba,
 	rsvd,
 	ClusterR,
-	cluster,
-	parallel,
-	genio (>= 1.0.15.9000)
+	cluster
 Suggests:
     testthat (>= 3.0.0)
 License: GPL-2
