--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: jackstraw
 Type: Package
 Title: Statistical Inference for Unsupervised Learning
-Version: 1.3.9.9000
+Version: 1.3.10.9000
 Author: Neo Christopher Chung <nchchung@gmail.com>, John D. Storey
     <jstorey@princeton.edu>, Wei Hao <whao@princeton.edu>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
-Maintainer: Neo Christopher Chung <nchchung@gmail.com>, Alejandro Ochoa <alejandro.ochoa@duke.edu>
+Maintainer: Neo Christopher Chung <nchchung@gmail.com>
 Description: Test for association between the observed data and their estimated latent variables. The jackstraw package provides a resampling strategy and testing scheme to estimate statistical significance of association between the observed data and their latent variables. Depending on the data type and the analysis aim, the latent variables may be estimated by principal component analysis (PCA), factor analysis (FA), K-means clustering, and related algorithms. The jackstraw methods learn over-fitting characteristics inherent in this circular analysis, where the observed data are used to estimate the latent variables and used again to test against that estimated latent variables. When latent variables are estimated by PCA, the jackstraw enables statistical testing for association between observed variables and latent variables, as estimated by low-dimensional principal components (PCs). This essentially leads to identifying variables that are significantly associated with PCs. Similarly, unsupervised clustering, such as K-means clustering, partition around medoids (PAM), and others, finds coherent groups in high-dimensional data. The jackstraw estimates statistical significance of cluster membership, by testing association between data and cluster centers. Clustering membership can be improved by using the resulting jackstraw p-values and posterior inclusion probabilities (PIPs), with an application to unsupervised evaluation of cell identities in single cell RNA-seq.
 LazyData: true
 Depends: R (>= 3.0.0)
@@ -20,23 +20,12 @@ Imports:
 	cluster,
 	lfa (>= 2.0.6.9000),
 	gcatest (>= 2.0.4.9000),
-	parallel,
 	alstructure,
 	BEDMatrix,
 	genio (>= 1.0.15.9000)
 Suggests:
-    knitr,
-    rmarkdown,
-    ggplot2,
-    mutoss,
-    Matrix,
-    gridExtra,
-    cowplot,
-    scales,
-    formatR,
     testthat (>= 3.0.0)
 License: GPL-2
 Encoding: UTF-8
-RoxygenNote: 7.1.2
-VignetteBuilder: knitr
+RoxygenNote: 7.2.3
 Config/testthat/edition: 3
