Added functions `ncp_est`, `pvals_nc_chisq`, package dependency `stats4`, and dcumentation now uses markdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,7 @@ export(jackstraw_pam)
 export(jackstraw_pca)
 export(jackstraw_rpca)
 export(jackstraw_subspace)
+export(ncp_est)
 export(permutationPA)
 export(pip)
+export(pvals_nc_chisq)
