--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: jackstraw
 Type: Package
 Title: Statistical Inference for Unsupervised Learning
-Version: 1.3.17
+Version: 1.3.17.9000
 Authors@R: c(
     person(given = c("Neo", "Christopher"),
            family = "Chung",
@@ -30,6 +30,7 @@ biocViews:
 Imports:
 	methods,
 	stats,
+	stats4,
 	corpcor,
 	irlba,
 	rsvd,
@@ -44,5 +45,6 @@ Suggests:
 	testthat (>= 3.0.0)
 License: GPL-2
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
